--- a/public/frontend/assets/css/master.css
+++ b/public/frontend/assets/css/master.css
@@ -1219,7 +1219,7 @@ img {
 }
 
 .dark .service__area {
-    background-color: transparent;
+    background-color: #0e0e0e38 !important;
 }
 
 .dark .service__area-2 {
@@ -1524,7 +1524,7 @@ img {
 }
 
 .dark .portfolio__about {
-    background-color: transparent !important;
+    background-color: #0e0e0e38 !important;
 }
 
 .dark .portfolio__about::after {
@@ -2076,7 +2076,7 @@ img {
 }
 
 .dark .award__area {
-    background-color: var(--d-black-2);
+    background-color: #0e0e0e38 !important;
 }
 
 .dark .main-menu-3 li a {
@@ -10511,8 +10511,8 @@ img {
 
 .service__img.active {
     opacity: 1;
-    -webkit-transform: rotate(15deg) translateX(60px) translateY(30px);
-    transform: rotate(15deg) translateX(60px) translateY(30px);
+    -webkit-transform: rotate(15deg) translateX(60px) translateY(0px);
+    transform: rotate(15deg) translateX(60px) translateY(0px);
 }
 
 .service__img-wrapper {
@@ -16020,7 +16020,7 @@ img {
 
 .portfolio__project .pp-slide {
     overflow: hidden;
-    padding: 80px 0 80px 80px;
+    padding: 80px 40px 80px 40px;
 }
 
 @media only screen and (min-width: 1200px) and (max-width: 1399px) {
@@ -16055,8 +16055,8 @@ img {
 
 @media only screen and (min-width: 1400px) and (max-width: 1919px) {
     .portfolio__project .pp-slide-img {
-        max-width: 430px;
-        max-height: 600px;
+        max-width: 100%;
+        max-height: 750px;
     }
 }
 
@@ -16701,9 +16701,9 @@ img {
     }
 }
 
-.portfolio-section {
+/* .portfolio-section {
     height: 100vh;
-}
+} */
 
 @media (max-width: 1300px) {
     .portfolio-section {
@@ -17600,7 +17600,7 @@ img {
 .blog__title-2 {
     display: block;
     font-weight: 500;
-    font-size: 26px;
+    font-size: 20px;
     line-height: 1.2;
     color: var(--black-2);
     border-bottom: 1px solid var(--gray-5);
@@ -18144,6 +18144,7 @@ img {
     -webkit-transition: 0.5s;
     transition: 0.5s;
     background-size: cover;
+    width: 100%;
 }
 
 @media (max-width: 1023px) {
@@ -41796,3 +41797,388 @@ ul.mega-menu-2.woocomerce-megamenu {
     color: #e2e8f0;
     font-family: Poppins;
 }
+img.skill-icon {
+    max-width: 15px;
+    position: relative;
+    top: -2px;
+}
+
+
+
+
+.custom-container {
+    position: relative;
+    width: 100%;
+    min-height: 100vh;
+    padding: 2rem;
+    background-color: transparent;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .form {
+    width: 100%;
+    max-width: 75%;
+    background-color: #0a0a0a85;
+    border-radius: 10px;
+    box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+    overflow: hidden;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    border: 2px solid #bde224 !important;
+  }
+
+  .contact-form {
+    background-color: #292929;
+    position: relative;
+  }
+
+  .circle {
+    border-radius: 50%;
+    background: linear-gradient(135deg, transparent 20%, #c9f31d);
+    position: absolute;
+  }
+
+  .circle.one {
+    width: 130px;
+    height: 130px;
+    top: 130px;
+    right: -40px;
+  }
+
+  .circle.two {
+    width: 80px;
+    height: 80px;
+    top: 10px;
+    right: 30px;
+  }
+
+  .contact-form:before {
+    content: "";
+    position: absolute;
+    width: 26px;
+    height: 26px;
+    background-color: #c9f31d;
+    transform: rotate(45deg);
+    top: 50px;
+    left: -13px;
+  }
+
+  form {
+    padding: 2.3rem 2.2rem;
+    z-index: 10;
+    overflow: hidden;
+    position: relative;
+  }
+
+  .title {
+    color: #fff;
+    font-weight: 500;
+    font-size: 1.5rem;
+    line-height: 1;
+    margin-bottom: 0.7rem;
+  }
+
+  .custom-input-custom-container {
+    position: relative;
+    margin: 1rem 0;
+  }
+
+  .custom-input {
+    width: 100%;
+    outline: none;
+    border: 2px solid #fafafa;
+    background: none;
+    padding: 0.6rem 1.2rem;
+    color: #fff;
+    font-weight: 500;
+    font-size: 0.95rem;
+    letter-spacing: 0.5px;
+    border-radius: 5px;
+    transition: 0.3s;
+  }
+
+  textarea.custom-input {
+    padding: 0.8rem 1.2rem;
+    min-height: 150px;
+    border-radius: 5px;
+    resize: none;
+    overflow-y: auto;
+  }
+
+  .custom-input-custom-container label {
+    position: absolute;
+    top: 50%;
+    left: 15px;
+    transform: translateY(-50%);
+    padding: 0 0.4rem;
+    color: #fafafa;
+    font-size: 0.9rem;
+    font-weight: 400;
+    pointer-events: none;
+    z-index: 1000;
+    transition: 0.5s;
+  }
+
+  .custom-input-custom-container.textarea label {
+    top: 1rem;
+    transform: translateY(0);
+  }
+
+  .btn {
+    padding: 0.6rem 1.3rem;
+    background-color: #fff;
+    border: 2px solid #fafafa;
+    font-size: 0.95rem;
+    color: #000;
+    line-height: 1;
+    border-radius: 5px;
+    outline: none;
+    cursor: pointer;
+    transition: 0.3s;
+    margin: 0;
+    width: 100%;
+  }
+
+  .btn:hover {
+    background-color: transparent;
+    color: #fff;
+  }
+
+  .custom-input-custom-container span {
+    position: absolute;
+    top: 0;
+    left: 25px;
+    transform: translateY(-50%);
+    font-size: 0.8rem;
+    padding: 0 0.4rem;
+    color: transparent;
+    pointer-events: none;
+    z-index: 500;
+  }
+
+  .custom-input-custom-container span:before,
+  .custom-input-custom-container span:after {
+    content: "";
+    position: absolute;
+    width: 10%;
+    opacity: 0;
+    transition: 0.3s;
+    height: 5px;
+    background-color: #c9f31d;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+
+  .custom-input-custom-container span:before {
+    left: 50%;
+  }
+
+  .custom-input-custom-container span:after {
+    right: 50%;
+  }
+
+  .custom-input-custom-container.focus label {
+    top: 0;
+    transform: translateY(-50%);
+    left: 25px;
+    font-size: 0.8rem;
+  }
+
+  .custom-input-custom-container.focus span:before,
+  .custom-input-custom-container.focus span:after {
+    width: 50%;
+    opacity: 1;
+  }
+
+  .contact-info {
+    padding: 2.3rem 2.2rem;
+    position: relative;
+  }
+
+  .contact-info .title {
+    color: #c9f31d;
+  }
+
+  .text {
+    color: #333;
+    margin: 1.5rem 0 2rem 0;
+  }
+
+  .information {
+    display: flex;
+    color: #555;
+    margin: 0.7rem 0;
+    align-items: center;
+    font-size: 0.95rem;
+  }
+
+  .information i {
+    color: #c9f31d;
+  }
+
+  .icon {
+    width: 28px;
+    margin-right: 0.7rem;
+  }
+
+  .social-media {
+    padding: 2rem 0 0 0;
+  }
+
+  .social-media p {
+    color: #333;
+  }
+
+  .social-icons {
+    display: flex;
+    margin-top: 0.5rem;
+  }
+
+  .social-icons a {
+    width: 35px;
+    height: 35px;
+    border-radius: 5px;
+    background: linear-gradient(45deg, #c9f31d, #5a5a5a);
+    color: #fff;
+    text-align: center;
+    line-height: 35px;
+    margin-right: 0.5rem;
+    transition: 0.3s;
+  }
+
+  .social-icons a:hover {
+    transform: scale(1.1);
+  }
+
+  .contact-info:before {
+    content: "";
+    position: absolute;
+    width: 110px;
+    height: 100px;
+    border: 22px solid #c9f31d;
+    border-radius: 50%;
+    bottom: -77px;
+    right: 50px;
+    opacity: 0.3;
+  }
+
+  .big-circle {
+    position: absolute;
+    width: 500px;
+    height: 500px;
+    border-radius: 50%;
+    background: linear-gradient(to bottom, #c9f31d, #c9f31d);
+    bottom: 50%;
+    right: 50%;
+    transform: translate(-40%, 38%);
+  }
+
+  .big-circle:after {
+    content: "";
+    position: absolute;
+    width: 360px;
+    height: 360px;
+    background-color: #0e0f1a;
+    border-radius: 50%;
+    top: calc(50% - 180px);
+    left: calc(50% - 180px);
+  }
+
+  .square {
+    position: absolute;
+    height: 400px;
+    top: 50%;
+    left: 50%;
+    transform: translate(181%, 11%);
+    opacity: 0.2;
+  }
+
+  @media (max-width: 850px) {
+    .form {
+      grid-template-columns: 1fr;
+    }
+
+    .contact-info:before {
+      bottom: initial;
+      top: -75px;
+      right: 65px;
+      transform: scale(0.95);
+    }
+
+    .contact-form:before {
+      top: -13px;
+      left: initial;
+      right: 70px;
+    }
+
+    .square {
+      transform: translate(140%, 43%);
+      height: 350px;
+    }
+
+    .big-circle {
+      bottom: 75%;
+      transform: scale(0.9) translate(-40%, 30%);
+      right: 50%;
+    }
+
+    .text {
+      margin: 1rem 0 1.5rem 0;
+    }
+
+    .social-media {
+      padding: 1.5rem 0 0 0;
+    }
+  }
+
+  @media (max-width: 480px) {
+    .custom-container {
+      padding: 1.5rem;
+    }
+
+    .contact-info:before {
+      display: none;
+    }
+
+    .square,
+    .big-circle {
+      display: none;
+    }
+
+    form,
+    .contact-info {
+      padding: 1.7rem 1.6rem;
+    }
+
+    .text,
+    .information,
+    .social-media p {
+      font-size: 0.8rem;
+    }
+
+    .title {
+      font-size: 1.15rem;
+    }
+
+    .social-icons a {
+      width: 30px;
+      height: 30px;
+      line-height: 30px;
+    }
+
+    .icon {
+      width: 23px;
+    }
+
+    .custom-input {
+      padding: 0.45rem 1.2rem;
+    }
+
+    .btn {
+      padding: 0.45rem 1.2rem;
+    }
+  }
