--- a/public/frontend/assets/css/master.css
+++ b/public/frontend/assets/css/master.css
@@ -16085,7 +16085,7 @@ img {
 .portfolio__project .pp-prev {
     position: absolute;
     top: calc(50% - 12px);
-    right: 0;
+    left: 0;
     z-index: 9;
     opacity: 1;
 }
@@ -16102,28 +16102,28 @@ img {
     width: 50px;
     height: 1px;
     top: 13px;
-    left: -55px;
+    left: 45px;
     background-color: var(--black-2);
 }
 
 .portfolio__project .pp-next {
     position: absolute;
     top: calc(50% - 12px);
-    left: 0;
+    right: 0;
     z-index: 9;
     opacity: 1;
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
     .portfolio__project .pp-next {
-        left: 0;
+        right: 0;
     }
 }
 
 @media only screen and (max-width: 767px) {
     .portfolio__project .pp-next {
         top: 95%;
-        left: 0;
+        right: 0;
     }
 }
 
@@ -16133,15 +16133,15 @@ img {
     width: 50px;
     height: 1px;
     top: 13px;
-    left: 45px;
+    left: -55px;
     background-color: var(--black-2);
 }
 
 .portfolio__project .pp-slide-title {
     font-weight: 500;
-    font-size: 36px;
+    font-size: 35px;
     line-height: 1.3;
-    text-align: right;
+    /* text-align: right; */
     text-transform: uppercase;
     color: var(--black-2);
 }
@@ -16177,7 +16177,7 @@ img {
     -ms-flex-pack: center;
     justify-content: center;
     max-width: 300px;
-    margin-left: auto;
+    /* margin-left: auto; */
     opacity: 1;
 }
 
@@ -16185,7 +16185,7 @@ img {
     font-weight: 400;
     font-size: 14px;
     line-height: 1.5;
-    text-align: right;
+    /* text-align: right; */
     text-transform: uppercase;
     color: var(--black-3);
     padding-top: 15px;
@@ -30291,6 +30291,9 @@ main {
     .award__item-7 .title {
         font-size: 14px;
     }
+}
+.team__area-7{
+    background-color: #0e0e0e87 !important;
 }
 
 .team__area-7 .sec-text {
