--- a/public/frontend/assets/css/master.css
+++ b/public/frontend/assets/css/master.css
@@ -16079,6 +16079,7 @@ img {
     -webkit-transform: rotate(-15deg);
     transform: rotate(-15deg);
     max-width: 100%;
+    box-shadow:8px 9px 30px 4px #2323239e ;
 }
 
 .portfolio__project .swipper-btn {
